[gd_scene load_steps=3 format=3 uid="uid://c4uon6kmxfjpd"]

[ext_resource type="Theme" uid="uid://bli0ffcjwbud6" path="res://Resources/Edit_Textures/panel_confirmacion.tres" id="1_3bfin"]
[ext_resource type="Script" path="res://Maze/Controller/UI/GuardarPartida.gd" id="1_8df2m"]

[node name="GuardarPartida" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8df2m")

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(450, 350)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -175.0
offset_right = 225.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3bfin")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Panel/VBox/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/Margin/VBox"]
layout_mode = 2
text = "Guardar Partida"

[node name="HSeparator" type="HSeparator" parent="Panel/VBox/Margin/VBox"]
layout_mode = 2

[node name="Margin2" type="MarginContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="Panel/VBox/Margin2"]
layout_mode = 2
text = "Nombre de la partida"

[node name="Margin3" type="MarginContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/Margin3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Nombre" type="LineEdit" parent="Panel/VBox/Margin3/HBox"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 20
max_length = 25

[node name="Longitud" type="Label" parent="Panel/VBox/Margin3/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "max 25 caracteres"

[node name="Margin4" type="MarginContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="Panel/VBox/Margin4"]
layout_mode = 2
text = "Detalles de la partida"

[node name="Margin5" type="MarginContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/Margin5"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Info" type="Label" parent="Panel/VBox/Margin5/HBox"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Resultado:
Tiempo:
Ultimo guardado:"

[node name="Margin6" type="MarginContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/Margin6"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Guardar" type="Button" parent="Panel/VBox/Margin6/HBox"]
layout_mode = 2
text = "Guardar"

[node name="Cancelar" type="Button" parent="Panel/VBox/Margin6/HBox"]
layout_mode = 2
text = "Cancelar"

[connection signal="pressed" from="Panel/VBox/Margin6/HBox/Guardar" to="." method="_on_guardar_pressed"]
[connection signal="pressed" from="Panel/VBox/Margin6/HBox/Cancelar" to="." method="_on_cancelar_pressed"]
